--- a/myapp/src/componenets/createpaper/CreateMain.css
+++ b/myapp/src/componenets/createpaper/CreateMain.css
@@ -120,4 +120,94 @@ font-style: normal;
 font-weight: 400;
 padding-top: 15px;
 }
+.contain{
+    background: linear-gradient(180deg, #3675A8 0%, #2AA0FF 100%);
+    height:100vh;
 
+}
+.pcs{
+    margin: 12px;
+
+}
+.total{
+    border-radius: 35px 35px 0px 0px;
+background: #FFF;
+height: 60%;
+overflow-y: auto;
+
+
+}
+.upperdiv{
+    height: 25%;
+    color: #FFF;
+    text-align: center;
+    font-family: Archivo;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    /* padding-top: 3rem; */
+   
+
+}
+.hr{
+    border: 1px solid grey;
+ 
+}
+.tq{
+    color: #565656;
+
+font-family: Archivo;
+font-size: 20px;
+font-style: normal;
+font-weight: 600;
+}
+.sets{
+    color: #242424;
+font-family: Archivo;
+font-size: 24px;
+font-style: normal;
+font-weight: 600;
+border: 1px solid black;
+text-align: center;
+
+
+}
+.outline{
+    border-radius: 10px;
+background: #FFF;
+}
+.action{
+    color: #FF2525;
+
+text-align: center;
+font-family: Archivo;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+}
+.cancel{
+    border-radius: 5px;
+background: #FF2525;
+color: #FFF;
+
+font-family: Archivo;
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+width: 30%;
+border: 0;
+padding: 15px;
+width: 80%;
+}
+.ahead{
+    font-family: Archivo;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    width: 30%;
+    border: 1px solid black;
+    padding: 15px;
+    width: 80%; 
+    border-radius: 5px;
+    background: #fff;
+}
